<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (c) 2015 Andreas Pabst
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  -->
<resources>

    <string name="app_name">Strokerate</string>
    <string name="stopwatch">StopWatch</string>
    <string name="strokecoach">StrokeCoach</string>
    <string name="stroke">Stroke!</string>
    <string name="start_time">Start</string>
    <string name="stop_time">Stop</string>
    <string name="reset_time">Reset</string>
    <string name="lap_time">Lap</string>
    <string name="reset_warning">Reset only possible when stopped!</string>
    <string name="about">About</string>
    <string name="prefs_web_page">Visit my web page</string>
    <string name="prefs_version">App-Version</string>
    <string name="backtoexit">Press \"back\" again to exit!</string>
    <string name="prefs_version_number">1.5.0</string>
    <string name="settings">Settings</string>
    <string name="ads_on">Thanks for supporting us!</string>
    <string name="license">License</string>
    <string name="license_sub">Show license</string>
    <string name="advertisement">Advertisement</string>
    <string name="ads_info">About advertisement</string>
    <string name="enable_ads">Show advertisement</string>
    <string name="ads_off">Please support us by watching some ads!</string>
    <string name="ads_explanation">Showing ads helps us providing you free and high-quality apps. It takes some time
        and effort to produce such great apps and this is a good way to give us something back for our work.
        The users also take profit of this, as they get to know great new apps. \nThank you very much for your support!
    </string>
    <string name="ads_apply_attention">
        NOTE: You probably have to restart the app completely for the changes to take effect!
    </string>

</resources>
