<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2015 Andreas Pabst

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
            android:key="show_adinfo"
            android:title="@string/advertisement"
            android:summary="@string/ads_info"/>

    <Preference
            android:key="license"
            android:title="@string/license"
            android:summary="@string/license_sub"/>

    <PreferenceCategory
            android:title="@string/about">

        <Preference
                android:title="@string/prefs_web_page" >
            <intent android:action="android.intent.action.VIEW"
                    android:data="http://puregram.de/strokeapp" />
        </Preference>

        <Preference
                android:key="version_nr"
                android:title="@string/prefs_version"
                android:selectable="false" />

    </PreferenceCategory>

</PreferenceScreen>