<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (c) 2015 Udduk
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <RelativeLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

        <udduk.stroke_coach.DrawTextView
                android:textSize="60.0sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <LinearLayout android:orientation="horizontal"
                      android:id="@+id/lin_layout"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/time">

            <Button android:id="@+id/start_button"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:background="@color/green_button"
                    android:layout_marginEnd="@dimen/button_stopwatch_margin"
                    android:layout_marginRight="@dimen/button_stopwatch_margin"
                    android:layout_weight="1.0"/>

            <Button android:id="@+id/lap_button"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/lap_time"
                    android:background="@color/yellow_button"
                    android:layout_marginEnd="@dimen/button_stopwatch_margin"
                    android:layout_marginRight="@dimen/button_stopwatch_margin"
                    android:layout_weight="1.0"/>

            <Button android:id="@+id/reset_button"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_time"
                    android:background="@color/red_button"
                    android:layout_weight="1.0"/>

        </LinearLayout>

        <TextView android:textSize="70.0sp"
                  android:textStyle="bold"
                  android:gravity="center_horizontal"
                  android:id="@+id/rate_stop"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/lin_layout"/>

        <Button android:id="@+id/button_stroke_stop"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:minHeight="170.0dip"
                android:text="@string/stroke"
                android:background="@color/orange_button"
                android:layout_below="@id/rate_stop"
                android:layout_alignParentLeft="true"/>

        <TextView android:textSize="25.0sp"
                  android:id="@+id/result_stop"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/button_stroke_stop"/>

    </RelativeLayout>

</ScrollView>